<resources>
    <string name="app_name">inujeungPlayer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_radio">Radio</string>
    <string name="title_list">List</string>
    <string name="title_play">Play</string>


    <string name="text_value_radio_notification">Music-Radio Player</string>
    <string name="acra_toast_text">ACRA Crash Repot</string>
    <string name="mail_subject">InuPlayer 크래시 발생</string>
    <string name="mail_body">기본바디</string>
    <string name="quick_scroll_handle">quick scroll handle</string>
    <string name="noti_play_stop">Notification Play \u0026 Stop</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>

    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="update_dialog_title">Update?</string>
    <string name="update_dialog_message">Update %1$s?</string>
    <string name="update_dialog_positive">Update</string>
    <string name="update_dialog_negative">Cancel</string>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="modify">Update</string>
    <string name="allMusic">\u0040</string>

    <string name="go_parent_label">"⬆️ Parent folder"</string>
    <string name="folder_item">🗂 %1$s</string>
    <string name="file_item">📄 %1$s</string>
    <string name="permission_rationale_message">We need your permission to access your files\n and display them to you</string>
    <string name="permission_request_label">Give permission</string>
    <string name="legacy_external_storage_warning_message">You need to enable the <b>requestLegacyExternalStorage</b>\n flag in the AndroidManifest.xml file</string>
    <string name="settings_title">File Manager settings</string>
    <string name="file_manager_title">File Manager sample</string>
    <string name="sdk_codename_info">SDK codename: %1$s</string>
    <string name="sdk_version_info">SDK version: %1$s</string>
    <string name="legacy_storage_info">Legacy External Storage: %1$s</string>
    <string name="permission_used_info">Permission used: %1$s</string>
    <string name="permission_granted_info">Permission granted: %1$s</string>
    <string name="open_settings_button_label">Open settings</string>
    <string name="request_permission_button_label">Request permission</string>
</resources>